# CubesatPayload

./: README.md
GroundStation/: README.md  Sample_json_payload  imageAnalysis.py  payload_records 1.csv  telemetry_reader.py
STM32 Code - Health system/: STM_Health_Motnitor.txt
satellite_payload/: package.xml  setup.cfg  setup.py
satellite_payload/config/: bno055_cal.json
satellite_payload/launch/: launch_payload.py
satellite_payload/satellite_payload/: Report_2025-10-01_14-13-40.txt  cam_node.py  env_node.py  fusion_node.py  imu_node.py  light_node.py  scheduler_node.py  telemetry_uploader.py
satellite_payload/satellite_payload/install/: local_setup.sh  setup.sh
satellite_payload/scripts/: load_bno055_cal.py  save_bno055_cal.py
