<?xml version="1.0"?>
<package format="3">
  <name>satellite_payload</name>
  <version>0.0.3</version>
  <description>Camera + IMU + Env + Light Sensor.</description>
  <maintainer email="noreply@example.com">ECU Workshop 4</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
